methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
def hunt(c:Color) {while(!estSurBiscuit){if (isFacingTrail()){avance();baisseBrosse();leveBrosse()};else{droite()} };prendBiscuit()
                                                          ^SlugSnail:7: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
def hunt() {while(!estSurBiscuit){if (isFacingTrail()){avance();baisseBrosse();leveBrosse()};else{droite()} };prendBiscuit()
                                                   ^